# incredible

./: .gitignore  Cargo.toml  Info.plist  README.md  package.json  pnpm-lock.yaml  run  run.bat
.github/workflows/: downloadable_binaries.yml  github_pages.yml  website_deploy.yml
docs/: CNAME  index.html
docs/assets/: incredible_bg-DAoAP5hg.wasm  index-CW_m8_1P.css  index-UC46BbpW.js
scripts/: build_all.js  build_macos.js  build_terminal.js  build_web.js  build_windows.js  clean.js  dev.js  set_name.js  utils.js  vite-plugin-cargo-metadata.ts
src/: app.rs  lib.rs  macos.rs  main.rs  main.ts  platform.rs  runtime.rs  windows.rs
src/content/: homepage.md
web/: index.html  style.css
